# EGSfM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
app/: CMakeLists.txt  config.yaml  fisher_vector_similarity.cpp  fisher_vector_trainer.cpp  image_cluster.cpp  matching.cpp  sfm_align.cpp  sfm_reconstruction.cpp  vg_matching.cpp
cmake/: ConfigGTest.cmake  DownloadGTest.cmake  FindEasyExif.cmake  FindEigen.cmake  FindGlog.cmake  FindOpenImageIO.cmake  FindSTLPlus3.cmake  FindVlFeat.cmake  LinkEasyExif.cmake  LinkGTests.cmake  LinkGlog.cmake  LinkOpenCV.cmake  LinkOpenImageIO.cmake  LinkSTLPlus3.cmake  LinkVlFeat.cmake  SetAppsTargetname.cmake  SetLibsTargetname.cmake  UseGTest.cmake  UseOpenCV.cmake
ext/: CMakeLists.txt
ext/easyexif/: CMakeLists.txt
ext/graclus/: CMakeLists.txt
ext/graclus/graclus/: graclus.c  io.c  io.h
ext/libvot/: CMakeLists.txt
ext/libvot/src/: CMakeLists.txt
ext/libvot/src/examples/: CMakeLists.txt  web_search.cpp
ext/libvot/src/feature/: CMakeLists.txt
ext/libvot/src/utils/: CMakeLists.txt
ext/libvot/src/vocab_tree/: CMakeLists.txt  vot_pipeline.h
ext/openMVG/: CMakeLists.txt
ext/openMVG/dependencies/osi_clp/: README.openMVG
ext/openMVG/openMVG/exif/sensor_width_database/: ParseDatabase.hpp  sensor_width_camera_database.txt
ext/openMVG/openMVG/geodesy/: geodesy.hpp
ext/openMVG/openMVG/matching/: pairwiseAdjacencyDisplay.cpp  pairwiseAdjacencyDisplay.hpp
ext/openMVG/openMVG/matching_image_collection/: GeometricFilter.hpp
ext/openMVG/openMVG/sfm/pipelines/sequential/: sequential_SfM.cpp  sequential_SfM.hpp
ext/openMVG/openMVG/tracks/: tracks.hpp
ext/openMVG/software/: CMakeLists.txt
ext/openMVG/software/SfM/: CMakeLists.txt
ext/stlplus3/: CMakeLists.txt  file_system.cpp  stlplus.h
ext/vlfeat/: CMakeLists.txt
ext/yaml-cpp/: CMakeLists.txt
scripts/: feature_extract.py  gmm_training.py  install.sh
scripts/sfm/: exhaustive_match_graphsfm.py  openmvg_sequential_pipeline.py  sfm_divide_and_conquer_pipeline.py  viewing_graph_graphsfm.py
src/: CMakeLists.txt
src/feature/: CMakeLists.txt  feature.cpp  feature.h  fisher_vector_extractor.cpp  fisher_vector_extractor.h  global_descriptor_extractor.h  sift.cpp  sift.h
src/geometry/: CMakeLists.txt  align_rotations.cpp  align_rotations.h  align_rotations_test.cpp  bundle_adjustment.cpp  bundle_adjustment.h  image_cluster.cpp  image_cluster.h  ransac.h  ransac_similarity.h  sfm_aligner.cpp  sfm_aligner.h  sfm_optimizer.cpp  sfm_optimizer.h  sim3.h  similarity_graph_optimization.cpp  similarity_graph_optimization.h
src/graph/: CMakeLists.txt  graph.h  graph.inl  graph_cut.cpp  union_find.cpp  union_find.h
src/log/: CMakeLists.txt  log.cpp  log.h
src/matching/: CMakeLists.txt  matcher.cpp  matcher.h
src/math/: CMakeLists.txt  distribution.h  l1_solver.h  l1_solver_test.cpp  reservoir_sampler.h  reservoir_sampler_test.cpp  rotation.cpp  rotation.h  sparse_cholesky_llt.cpp  sparse_cholesky_llt.h  util.h
src/sfm/: CMakeLists.txt  sfm_reconstruction_controller.cpp  sfm_reconstruction_controller.h  sfm_reconstruction_manager.h  sfm_reconstructor.cpp  sfm_reconstructor.h
src/solvers/: CMakeLists.txt  estimator.h  evsac.h  evsac_sampler.h  evsac_test.cpp  exhaustive_ransac.h  exhaustive_ransac_test.cpp  exhaustive_sampler.cpp  exhaustive_sampler.h  exhaustive_sampler_test.cpp  inlier_support.h  lmed.h  lmed_quality_measurement.h  lmed_test.cpp  mle_quality_measurement.h  prosac.h  prosac_sampler.cpp  prosac_sampler.h  prosac_test.cpp  quality_measurement.h  random_sampler.cpp  random_sampler.h  random_sampler_test.cpp  ransac.h  ransac_test.cpp  sample_consensus_estimator.h  sampler.h
src/util/: CMakeLists.txt  hash.h  map_util.h  ply_helper.h  random.cpp  random.h  stringprintf.cpp  stringprintf.h  types.h  util.h
